Update navbar styling and remove Home link
Adjusted inline styles for the navbar and logo in index.html to improve layout and appearance. Removed the Home link from the navigation menu. Added CSS for anchor tag padding in style.css.

--- a/css/style.css
+++ b/css/style.css
@@ -1366,3 +1366,8 @@ input[type="text"] {
 }
 
 /*# sourceMappingURL=style.css.map */
+/*---- added stylilng -------*/
+
+a{
+  padding-bottom: 0;
+}
