Revise profile and timeline content, update styles
Updated the profile section in index.html with a detailed professional summary and expanded timeline entries to reflect accurate job titles, responsibilities, and education history. Enhanced timeline formatting and added new CSS rules for improved layout and readability, including margin adjustments and custom list styling.

--- a/css/style.css
+++ b/css/style.css
@@ -518,6 +518,8 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 60%;
   display: inline-block;
   color: rgba(0, 0, 0, 0.5);
+  margin-right: 5px;
+
 }
 
 .fh5co-social-icons {
@@ -770,6 +772,11 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .timeline-body > p + p {
   margin-top: 5px;
+}
+
+.timeline-list{
+  margin-bottom: 5px;
+  list-style-type: none;
 }
 
 @media (max-width: 992px) {
