Add new testimonial and update testimonial containers
Added a testimonial for Tomáš Patsch with a new image and updated the HTML structure to use distinct testimonial container classes for each testimonial. Updated CSS to hide unused testimonial containers and style testimonial text. This improves testimonial management and presentation on the site.

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,17 @@
   text-decoration: none;
 }
 
+
+
+.testimonial_container3,
+.testimonial_container4,
+.testimonial_container5,
+.testimonial_container6,
+.testimonial_container7,
+.testimonial_container8 {
+  display: none;
+}
+
 .navbar-toggle {
   display: none;
   flex-direction: column;
@@ -1487,5 +1498,9 @@ p, li, .feature-copy p, .timeline-body p, .test_text, .company {
   .btn,
   .form-control {
     width: 100%;
+  }
+  
+  .test_txt {
+    color: #565657;
   }
 }
